--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -145,18 +145,25 @@ $nav-width: 380px !default
 // sidebar
 $sidebar-width: 80px !default
 $sidebar-width--lg: 320px !default
-$sidemenu-bg-color-hover: #999
+$side-menu-bg-color-hover: #999
+$side-menu-border-color: #999
 
 // catalog menu
 $catalog-menu-width: 604px !default
 $catalog-menu-width--md: 400px !default
 // ================
+$catalog-menu-horizontal-space: 20px !default
+$catalog-menu-arrow-size: 54px !default
 $catalog-menu-text-color: white !default
 $catalog-menu-bg-color: #333 !default
-$catalog-menu-bg-color-s: shade($catalog-menu-bg-color, 80%) !default
-$catalog-menu-bg-color-ss: shade($catalog-menu-bg-color, 62%) !default
-$catalog-menu-bg-color-sss: shade($catalog-menu-bg-color, 48%) !default
-$catalog-menu-bg-color-ssss: shade($catalog-menu-bg-color, 38%) !default
+$catalog-menu-bg-color-s: #333 !default
+$catalog-menu-bg-color-ss: #333 !default
+$catalog-menu-bg-color-sss: #333 !default
+$catalog-menu-bg-color-ssss: #333 !default
+//$catalog-menu-bg-color-s: shade($catalog-menu-bg-color, 80%) !default
+//$catalog-menu-bg-color-ss: shade($catalog-menu-bg-color, 62%) !default
+//$catalog-menu-bg-color-sss: shade($catalog-menu-bg-color, 48%) !default
+//$catalog-menu-bg-color-ssss: shade($catalog-menu-bg-color, 38%) !default
 $catalog-menu-border-color: rgba(0, 0, 0, 0.20) !default
 $catalog-menu-tab-height: 70px !default
 // =================
