--- a/src/sass/partials/_layout.sass
+++ b/src/sass/partials/_layout.sass
@@ -34,7 +34,7 @@
 		margin-right: $sidebar-width--lg
 
 	.ea-catalog-page &
-		margin-right: $catalog-menu-width
+		margin-right: $catalog-menu-width + $catalog-categories-width--full
 
 //+media('<desk-lg')
 	margin-right: 0
