--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -5,20 +5,26 @@
 /* CATALOG MENU
 /* catalog menu list
 .catalog-menu
+	overflow: hidden
 	position: fixed
 	right: 0
 	top: 0
 	height: 100%
-	padding-right: $catalog-categories-width--full
-	width: $catalog-menu-width
+	width: $catalog-menu-width + $catalog-categories-width--full
 	z-index: 998
+
+.catalog-menu-layout
+	overflow-x: hidden
+	overflow-y: auto
+	height: 100vh
 
 /* catalog menu list
 // общие стили для главного списка навигации
 .catalog-menu__list
 	position: relative
-	background-color: $catalog-menu-bg-color
+	width: $catalog-menu-width
 	min-height: 100%
+	background-color: $catalog-menu-bg-color
 
 // общие стили для подменю навигации
 .catalog-menu__drop
@@ -65,9 +71,9 @@
 		text-decoration: none
 		transition-property: color, background-color
 		transition-duration: $animation-speed
-		padding: #{round($catalog-menu-horizontal-space*0.85)} $catalog-menu-horizontal-space
+		padding: #{round($catalog-menu-horizontal-space*0.7)} $catalog-menu-horizontal-space
 		//border-bottom: 1px solid $catalog-menu-border-color
-		+font(16px, 20px)
+		+font(16px, 19px)
 
 // стили для пунктов навигации, у которых ЕСТЬ ПОДМЕНЮ
 .catalog-menu__list li.has-drop > .catalog-menu__tab > a
@@ -185,7 +191,7 @@
 	// ховер
 	.no-touchevents li > .catalog-menu__tab &:hover i
 		&::before, &::after
-			background-color: white
+			background-color: $base-color--ea
 
 // особые стили для пунктов ПОДМЕНЮ
 .catalog-menu__drop
@@ -194,12 +200,12 @@
 	ul, a, .catalog-menu__angle
 		background-color: $catalog-menu-bg-color-s
 
-		.no-touchevents &:hover
-			color: white
-
 	a
 		+font-bold
 		text-transform: uppercase
+
+		&:hover
+			color: $base-color--ea
 
 	.catalog-menu__drop
 		// особые стили для пунктов навигации ТРЕТЬЕГО урованя
@@ -207,8 +213,13 @@
 			background-color: $catalog-menu-bg-color-ss
 
 		a
+			+padding-vertical(round($catalog-menu-horizontal-space*0.6))
 			+font-normal
+			+font(14px, 17px)
 			text-transform: none
+
+			&:hover
+				color: $base-color--ea
 
 		.catalog-menu__drop
 			// особые стили для пунктов навигации ЧЕТВЕРТОГО урованя
@@ -216,9 +227,10 @@
 				background-color: $catalog-menu-bg-color-sss
 
 			a
-				+font(15px, 20px)
 				padding-left: #{round($catalog-menu-horizontal-space*2)}
 				+padding-vertical(round($catalog-menu-horizontal-space*0.5))
+				+font(13px, 17px)
+				color: #999
 				
 				&:hover
 					color: $base-color--ea
@@ -235,22 +247,23 @@
 	position: fixed
 	right: 0
 	top: 0
-	height: 100%
+	height: 100vh
 	width: $catalog-categories-width--full
 	background-color: $base-color--ea
 	z-index: 998
 
 .catalog-categories__holder
 	position: relative
-	width: $catalog-categories-width--full
-	top: 50%
-	transform: translate(0, -50%)
-	max-height: 100%
 	overflow-x: hidden
 	overflow-y: auto
+	width: calc(#{$catalog-categories-width--full} + 100px)
+	max-height: 100%
+	top: 50%
+	transform: translate(0, -50%)
 
 .catalog-categories__row
 	display: block
+	width: $catalog-categories-width--full
 	//position: absolute
 	//+position(0, 100%)
 	//+size(auto, 100%)
@@ -316,7 +329,7 @@
 	+display-inline-block-middle
 	max-width: calc(100% - #{$sidebar-width} - 5px)
 	position: relative
-	padding: 10px 20px 10px 0
+	padding: 10px 10px 10px 0
 	+font-bold
 	+font(14px, 17px)
 	text-align: left
@@ -328,6 +341,10 @@
 	//.no-touchevents .catalog-categories__cell:hover &
 		transition-delay: #{$animation-speed*1.5}
 		opacity: 1
+
+	.truncate
+		overflow: hidden
+		max-height: calc(17px*3)
 
 /* catalog categories end
 /* CATALOG MENU end
