--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -15,8 +15,8 @@
 		position: fixed
 		left: $header-width
 		margin: 0
-		width: calc(100% - #{$sidebar-width + $header-width})
-		max-width: calc(#{$page-layout-width - $sidebar-width - $header-width})
+		width: calc(100% - #{$sidebar-width} - #{$header-width})
+		max-width: calc(#{$page-layout-width} - #{$sidebar-width} - #{$header-width})
 		background-color: transparent
 
 		&::before
@@ -30,12 +30,12 @@
 			+linear-gradient(to bottom, rgba(0,0,0,0.94) 0%,rgba(0,0,0,0.84) 14%,rgba(0,0,0,0.7) 28%,rgba(0,0,0,0.35) 59%,rgba(0,0,0,0.18) 75%,rgba(0,0,0,0.06) 89%,rgba(0,0,0,0) 100%)
 
 	.home-page &
-		width: calc(100% - #{$sidebar-width--lg + $header-width})
-		max-width: calc(#{$page-layout-width - $sidebar-width--lg - $header-width})
+		width: calc(100% - #{$sidebar-width--lg} - #{$header-width})
+		max-width: calc(#{$page-layout-width} - #{$sidebar-width--lg} - #{$header-width})
 
 	.ea-catalog-page &
-		width: calc(100% - #{$catalog-menu-width + $header-width})
-		max-width: calc(#{$page-layout-width - $catalog-menu-width - $header-width})
+		width: calc(100% - #{$catalog-menu-width} - #{$catalog-categories-width--full} - #{$header-width})
+		max-width: calc(#{$page-layout-width} - #{$catalog-menu-width} - #{$catalog-categories-width--full} - #{$header-width})
 
 .top-panel-contacts
 	float: right
@@ -43,7 +43,7 @@
 
 .top-panel-contacts__item
 	+display-inline-block-top
-	padding: $top-panel-space 60px $top-panel-space 0
+	padding: #{$top-panel-space} 60px #{$top-panel-space} 0
 	+font(24px, 1.3)
 	letter-spacing: normal
 	color: black
