--- a/src/sass/partials/_header.sass
+++ b/src/sass/partials/_header.sass
@@ -5,7 +5,8 @@
 /*HEADER*/
 .header__holder
 	display: table
-	min-height: 100vh
+	//min-height: 100vh // не работает в фф
+	height: 100vh
 	width: 100%
 	table-layout: fixed
 
