--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -13,10 +13,19 @@
 	width: $catalog-menu-width + $catalog-categories-width--full
 	z-index: 998
 
+	+media('<desk-qhd')
+		width: $catalog-menu-width + $catalog-categories-width--short
+
+	+media('<desk-lg')
+		width: $catalog-menu-width
+
 .catalog-menu-layout
 	overflow-x: hidden
 	overflow-y: auto
 	height: 100vh
+
+	+media('<desk-lg')
+		width: calc(#{$catalog-menu-width} + 100px)
 
 /* catalog menu list
 // общие стили для главного списка навигации
@@ -25,6 +34,9 @@
 	width: $catalog-menu-width
 	min-height: 100%
 	background-color: $catalog-menu-bg-color
+
+	+media('<desk-lg')
+		background-color: $base-color--ea
 
 // общие стили для подменю навигации
 .catalog-menu__drop
@@ -75,6 +87,9 @@
 		//border-bottom: 1px solid $catalog-menu-border-color
 		+font(16px, 19px)
 
+		span
+			+display-inline-block-top
+
 // стили для пунктов навигации, у которых ЕСТЬ ПОДМЕНЮ
 .catalog-menu__list li.has-drop > .catalog-menu__tab > a
 	padding-right: (round($catalog-menu-arrow-size+10))
@@ -89,8 +104,8 @@
 			//+media('<desk-hd')
 			+media('<desk-md')
 				// для экранов меньше 1920
-				color: white
-				box-shadow: inset 5px 0 0 black
+				//color: $base-color--ea
+				//box-shadow: inset 5px 0 0 black
 
 		//& a span
 			border-color: $mark-color-alt
@@ -105,36 +120,110 @@
 // особые стили для пунктов навигации ПЕРВОГО урованя
 .catalog-menu__list > li
 
-	& > .catalog-menu__tab a
-		//background-color: $catalog-menu-bg-color
+	// скрываем при загрузке страницы
+	position: absolute
+	+position(0, 0)
+	width: 100%
+	z-index: -1
+	visibility: hidden
+	opacity: 0
 
+	// показываем, если не подключены скрипты
+	.no-js &
+		position: relative
+		+position(auto, auto)
+		width: auto
+		z-index: auto
+		visibility: visible
+		opacity: 1
+
+	// показываем после медиа запроса
+	// перебивая стили установленные скриптом
+	+media('<desk-lg')
+		position: relative !important
+		left: auto !important
+		top: auto !important
+		width: auto !important
+		z-index: auto !important
+		visibility: visible !important
+		opacity: 1 !important
+
+	& > .catalog-menu__tab a
+		// background-color: $catalog-menu-bg-color
 		// для больших экранов
 		+font-normal
-		+font(14px, 17px)
+		+font(12px, 16px)
 		color: #ccc
 		text-transform: uppercase
 		letter-spacing: 0.1em
 		background-color: #484848
 		+padding-vertical(10px)
 
+		+media('<desk-lg')
+			+font-bold
+			+font(14px, 17px)
+			color: black
+			text-transform: uppercase
+			letter-spacing: 0.025em
+			background-color: $base-color--ea
+			border-bottom: 1px solid $side-menu-bg-color-hover
+
 		.no-touchevents &:hover
 			color: white
 
-	// для больших экранов
 	&.has-drop > .catalog-menu__tab
+
 		a
 			padding-right: $catalog-menu-horizontal-space
 
+			+media('<desk-lg')
+				padding-right: round($catalog-menu-arrow-size+10)
+
+		// стрелка для пунктов навигации ПЕРВОГО урованя
 		.catalog-menu__angle
 			display: none
 
-	//&.is-open > .catalog-menu__tab a
-		background-color: shade($catalog-menu-bg-color, 90%)
-		border-color: shade($catalog-menu-border-color, 90%)
+			+media('<desk-lg')
+				display: block
+				border-width: 0 0 1px 1px
+				border-color: $side-menu-bg-color-hover
+				background-color: $base-color--ea
+
+				i
+					&::before, &::after
+						background-color: black
+
+		// ховер для стрелок пунктов навигации ПЕРВОГО урованя
+		+media('<desk-lg')
+			.no-touchevents &
+
+				.catalog-menu__angle:hover i
+
+					&::before, &::after
+							background-color: white
+
+	+media('<desk-lg')
+		&.is-open > .catalog-menu__tab
+			a
+				border-bottom-color: transparent
+				background-color: #5c5c5c
+				color: $base-color--ea
+
+			// актив для стрелок пунктов навигации ПЕРВОГО урованя
+			.catalog-menu__angle
+				background-color: #5c5c5c
+				border-bottom-color: transparent
+
+				i
+					&::before, &::after
+						background-color: $base-color--ea
 
 	// для больших экранов
 	& > .catalog-menu__drop
 		display: block
+
+		+media('<desk-lg')
+			display: none
 
 // СТРЕЛКИ навигации
 .catalog-menu__angle
@@ -202,10 +291,15 @@
 
 	a
 		+font-bold
+		+font(14px, 19px)
 		text-transform: uppercase
 
 		&:hover
 			color: $base-color--ea
+
+		+media('<desk-lg')
+			+font(16px, 19px)
+			text-transform: none
 
 	.catalog-menu__drop
 		// особые стили для пунктов навигации ТРЕТЬЕГО урованя
@@ -250,7 +344,22 @@
 	height: 100vh
 	width: $catalog-categories-width--full
 	background-color: $base-color--ea
+	box-shadow: -20px 0 35px transparent
+	transition-property: width, box-shadow
+	transition-duration: 0.3s
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+	will-change: transform
 	z-index: 998
+
+	+media('<desk-qhd')
+		width: $catalog-categories-width--short
+
+		&:hover
+			width: $catalog-categories-width--full
+			box-shadow: -20px 0 35px rgba(0, 0, 0, 0.2)
+
+	+media('<desk-lg')
+		display: none
 
 .catalog-categories__holder
 	position: relative
@@ -258,11 +367,13 @@
 	overflow-y: auto
 	width: calc(#{$catalog-categories-width--full} + 100px)
 	max-height: 100%
-	top: 50%
-	transform: translate(0, -50%)
+	// для центрирования по вертикали
+	//top: 50%
+	//transform: translate(0, -50%)
 
 .catalog-categories__row
 	display: block
+	overflow: hidden // Важно! Нужно для разворачивания скрытых пунктов
 	width: $catalog-categories-width--full
 	//position: absolute
 	//+position(0, 100%)
@@ -278,10 +389,15 @@
 	//.no-touchevents &:hover
 		transform: translate(-100%, 0)
 
+	//+media('<desk-qhd')
+		width: $catalog-categories-width--short
+
+
 .catalog-categories__item
 	display: block
 	margin-top: -1px
 	position: relative
+	width: $catalog-categories-width--full
 
 .catalog-categories__cell
 	position: relative
