--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -4,8 +4,7 @@
 
 /*buttons
 [class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
-	display: inline-block
-	vertical-align: top
+	+display-inline-block-top
 	position: relative
 	text-align: center
 	text-decoration: none
