--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -11,13 +11,32 @@
 	top: 0
 	height: 100%
 	width: $catalog-menu-width + $catalog-categories-width--full
-	z-index: 998
+	box-shadow: -5px 0 40px 5px transparent
+	z-index: 991
+	transition-property: box-shadow
+	transition-duration: 0.3s
+	transition-delay: 0.3s
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 
 	+media('<desk-qhd')
 		width: $catalog-menu-width + $catalog-categories-width--short
 
 	+media('<desk-lg')
 		width: $catalog-menu-width
+
+	+media('>=desk-sm')
+		visibility: inherit !important
+		opacity: 1 !important
+		transform: matrix(1, 0, 0, 1, 0, 0) !important
+
+	+media('<desk-sm')
+		opacity: 0
+		visibility: hidden
+		z-index: 998
+
+		.catalog-menu-popup-before-open &
+			box-shadow: -5px 0 40px 5px rgba(0, 0, 0, 0.15)
+			transition-delay: 0s
 
 .catalog-menu-layout
 	overflow-x: hidden
@@ -392,7 +411,6 @@
 	//+media('<desk-qhd')
 		width: $catalog-categories-width--short
 
-
 .catalog-categories__item
 	display: block
 	margin-top: -1px
@@ -463,4 +481,52 @@
 		max-height: calc(17px*3)
 
 /* catalog categories end
+
+/* overlay catalog menu
+.popup-overlay--catalog-menu
+	display: none
+
+/* overlay catalog menu end
+
+/* button catalog menu toggle
+.btn-catalog
+	display: none // скрывать на больших экранах
+	padding: 10px 20px
+	+font-bold
+	+font(18px, 24px)
+	white-space: nowrap
+	text-decoration: none
+	color: black
+	text-transform: uppercase
+	text-align: center
+	background-color: $base-color--ea
+
+	+media('<desk-sm')
+		+display-inline-block-top
+
+	.top-panel &
+		margin-top: $bottom-space
+
+	&::before
+		+pseudo-inline-block-relative()
+		vertical-align: top
+		+size(16px, 16px)
+		margin: 3px 15px -3px 0
+		+font(0, 0)
+		//background-color: transparent
+		//background-image: linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black)
+		background-image: linear-gradient(to right, transparent 0%, transparent 66.6%, #{$base-color--ea} 66.6%, #{$base-color--ea} 100%), linear-gradient(to bottom, black 0%, black 66.6%, #{$base-color--ea} 66.6%, #{$base-color--ea} 100%)
+		//+linear-gradient(to right, black 0%, black 66.6%, transparent 66.6%, transparent 100%)
+		background-size: 6px 4px, 4px 6px
+		background-position: 0 0, 0 0
+
+	span
+		+display-inline-block-top
+		white-space: normal
+		text-align: left
+
+	&:active
+		transform: translate(0, 2px)
+
+/* button catalog menu toggle
 /* CATALOG MENU end
