--- a/src/sass/components/_top-panel.sass
+++ b/src/sass/components/_top-panel.sass
@@ -7,7 +7,6 @@
 	position: relative
 	padding: 0 $page-layout-space-horizontal
 	margin: 0 $sidebar-width 0 $header-width
-	height: $top-panel-height
 	background-color: $bg-color
 	z-index: 40
 
@@ -42,7 +41,7 @@
 		width: calc(100% - #{$sidebar-width--lg} - #{$header-width})
 		//max-width: calc(#{$page-layout-width} - #{$sidebar-width--lg} - #{$header-width})
 
-	.ea-catalog-page &
+	.ea-has-catalog-menu &
 		width: calc(100% - #{$catalog-menu-width} - #{$catalog-categories-width--full} - #{$header-width})
 		//max-width: calc(#{$page-layout-width} - #{$catalog-menu-width} - #{$catalog-categories-width--full} - #{$header-width})
 
@@ -52,13 +51,22 @@
 		+media('<desk-lg')
 			width: calc(100% - #{$catalog-menu-width} - #{$header-width})
 
+		+media('<desk-sm')
+			width: calc(100% - #{$header-width})
+
+.top-panel-holder
+	height: $top-panel-height
+	+clear
+
 .top-panel-contacts
-	float: right
 	+clear-spacing
+
+	.top-panel &
+		float: left
 
 .top-panel-contacts__item
 	+display-inline-block-top
-	padding: #{$top-panel-space} 60px #{$top-panel-space} 0
+	padding: #{$top-panel-space} 60px 0 0
 	+font(24px, 1.3)
 	letter-spacing: normal
 	color: black
@@ -163,7 +171,46 @@
 
 /*contact phones end
 
-/*logo alt
+/* button to site
+.btn-siblings
+	+display-inline-block-top
+	background-color: white
+	padding: 10px 20px
+	+font-bold
+	+font(12px, 14px)
+	white-space: nowrap
+	text-decoration: none
+	color: #333
+	text-transform: uppercase
+	text-align: center
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3)
+	transition-property: box-shadow
+	transition-duration: $animation-speed
+
+	.top-panel &
+		float: right
+		margin-top: 16px
+
+	i
+		+display-inline-block-middle
+		+size(26px, 20px)
+		margin-right: 15px
+		+font(0, 0)
+		background: no-repeat center
+		background-image: url(../../img/logo-short-alt.png)
+		background-size: contain
+
+	span
+		+display-inline-block-middle
+		white-space: normal
+		text-align: left
+
+	&:hover
+		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5)
+
+/* button to site end
+
+/* logo alt
 .logo-alt
 	display: inline-block
 	z-index: 50
@@ -171,6 +218,7 @@
 	.top-panel &
 		float: left
 		height: 100%
+		margin-right: 50px
 
 	a
 		display: block
@@ -183,67 +231,79 @@
 		&::after
 			+vertical-align()
 
-	.logo-alt-title, .logo-alt-map
-		position: relative
-		+display-inline-block-middle
-		+font($font-size, $line-height)
-		letter-spacing: normal
-		white-space: normal
+.logo-alt-title, .logo-alt-map
+	position: relative
+	+display-inline-block-middle
+	+font($font-size, $line-height)
+	letter-spacing: normal
+	white-space: normal
 
-	.logo-alt-title__fig, .logo-alt-map__fig
-		text-indent: -9999px
-		overflow: hidden
-		position: relative
-		background-size: 100%
-		background-position: 0 0
-		background-repeat: no-repeat
+.logo-alt-title
 
-		.home-page &
-			background-position: 0 100%
+	+media('<desk-md')
+		display: none
 
-		&::before
-			+pseudo($pos: relative)
+.logo-alt-title__fig, .logo-alt-map__fig
+	text-indent: -9999px
+	overflow: hidden
+	position: relative
+	background-size: 100%
+	background-position: 0 0
+	background-repeat: no-repeat
 
-		span
-			+hide-text
+	.home-page &
+		background-position: 0 100%
 
-	.logo-alt-title__fig
-		+size(101px, auto)
-		background-image: url(../../img/logo-title.png)
+	&::before
+		+pseudo($pos: relative)
 
-		&::before
-			+ratio(101, 53)
+	span
+		+hide-text
 
-		.ea-site &
-			+size(125px, auto)
-			background-image: url(../../img/logo-title--ea.png)
+.logo-alt-title__fig
+	+size(101px, auto)
+	background-image: url(../../img/logo-title.png)
 
-			&::before
-				+ratio(125, 37)
+	&::before
+		+ratio(101, 53)
 
-	.logo-alt-map__fig
-		+size(192px, auto)
-		background-image: url(../../img/logo-map.png)
+	.ea-site &
+		+size(125px, auto)
+		background-image: url(../../img/logo-title--ea.png)
 
 		&::before
-			+ratio(192, 50)
+			+ratio(125, 37)
 
-		.ea-site &
-			background-image: url(../../img/logo-map--ea.png)
+.logo-alt-map__fig
+	+size(192px, auto)
+	background-image: url(../../img/logo-map.png)
 
-	.logo-alt-title + .logo-alt-map
-		padding-left: 20px
-		margin-left: 20px
+	&::before
+		+ratio(192, 50)
 
-		&::before
-			+pseudo()
-			top: 50%
-			left: 0
-			height: 44px
-			border: dotted $border-color
-			border-width: 0 0 0 1px
-			transform: translate(0, -50%)
+	.ea-site &
+		background-image: url(../../img/logo-map--ea.png)
 
-/*logo alt end
+.logo-alt-title + .logo-alt-map
+	padding-left: 20px
+	margin-left: 20px
 
-/*top panel end
+	+media('<desk-md')
+		padding-left: 0
+		margin-left: 0
+
+	&::before
+		+pseudo()
+		top: 50%
+		left: 0
+		height: 44px
+		border: dotted $border-color
+		border-width: 0 0 0 1px
+		transform: translate(0, -50%)
+
+		+media('<desk-md')
+			content: none
+
+/* logo alt end
+
+/* top panel end
