--- a/src/sass/components/_catalog-list.sass
+++ b/src/sass/components/_catalog-list.sass
@@ -132,6 +132,9 @@
 		+media('<desk-hd')
 			width: round-float(100%/3, 4)
 
+		+media('<desk-md')
+			width: round-float(100%/2, 4)
+
 
 	.catalog__inner
 		+padding-horizontal(30px)
