--- a/src/sass/components/_catalog-menu.sass
+++ b/src/sass/components/_catalog-menu.sass
@@ -15,7 +15,7 @@
 	z-index: 991
 	transition-property: box-shadow
 	transition-duration: 0.3s
-	transition-delay: 0.3s
+	transition-delay: 0.1s
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 
 	+media('<desk-qhd')
@@ -24,12 +24,12 @@
 	+media('<desk-lg')
 		width: $catalog-menu-width
 
-	+media('>=desk-sm')
+	+media('>=desk-md')
 		visibility: inherit !important
 		opacity: 1 !important
 		transform: matrix(1, 0, 0, 1, 0, 0) !important
 
-	+media('<desk-sm')
+	+media('<desk-md')
 		opacity: 0
 		visibility: hidden
 		z-index: 998
@@ -491,7 +491,7 @@
 /* button catalog menu toggle
 .btn-catalog
 	display: none // скрывать на больших экранах
-	padding: 10px 20px
+	padding: 13px #{$text-layout-space-horizontal--md}
 	+font-bold
 	+font(18px, 24px)
 	white-space: nowrap
@@ -501,11 +501,17 @@
 	text-align: center
 	background-color: $base-color--ea
 
-	+media('<desk-sm')
+	+media('<desk-md')
 		+display-inline-block-top
+
+	+media('<tab-lg')
+		display: block
 
 	.top-panel &
 		margin-top: $bottom-space
+
+		+media('<tab-lg')
+			margin-top: 0
 
 	&::before
 		+pseudo-inline-block-relative()
@@ -513,19 +519,15 @@
 		+size(16px, 16px)
 		margin: 3px 15px -3px 0
 		+font(0, 0)
-		//background-color: transparent
-		//background-image: linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black)
 		background-image: linear-gradient(to right, transparent 0%, transparent 66.6%, #{$base-color--ea} 66.6%, #{$base-color--ea} 100%), linear-gradient(to bottom, black 0%, black 66.6%, #{$base-color--ea} 66.6%, #{$base-color--ea} 100%)
-		//+linear-gradient(to right, black 0%, black 66.6%, transparent 66.6%, transparent 100%)
 		background-size: 6px 4px, 4px 6px
-		background-position: 0 0, 0 0
 
 	span
 		+display-inline-block-top
 		white-space: normal
 		text-align: left
 
-	&:active
+	//&:active
 		transform: translate(0, 2px)
 
 /* button catalog menu toggle
