--- a/src/sass/components/_scroll-nav.sass
+++ b/src/sass/components/_scroll-nav.sass
@@ -11,6 +11,9 @@
 	right: $sidebar-width + $scroll-nav-space
 	z-index: 50
 
+	+media('<tab-lg')
+		top: $scroll-nav-space + $top-panel-height--md
+
 	.home-page &
 		right: $sidebar-width--lg + $scroll-nav-space
 
