--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -57,6 +57,7 @@
 @import components/accordion-simple
 @import components/j-filer
 @import components/user-form
+@import components/user-options
 @import components/bitrix-search
 @import components/feature-list
 @import components/scroll-nav
